[gd_scene load_steps=2 format=3 uid="uid://cscgcd10ibwak"]

[ext_resource type="Script" path="res://scenes/inventory/slot.gd" id="1_n06r2"]

[node name="Slot" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0.247059)
custom_minimum_size = Vector2(48, 48)
offset_right = 64.0
offset_bottom = 64.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_n06r2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="QuantityLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 0
text = "x99"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="MarginContainer/TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/TextureRect" to="." method="_on_texture_rect_mouse_exited"]
